[package]
name = "lua-sys"
version = "5.4.4"
authors = ["Michael Pollind <mpollind@gmail.com>"]
edition = "2018"
links = "lua"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.59.2"

[features]
# Enable this feature if you want to have a statically linked bzip2
static = []
